Add try/catch block to `publish` method